--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -13,6 +13,7 @@ import { siteConfig } from "../../site.config";
 			href="/"
 		>
 			<img
+				id="site-logo"
 				class="me-3 h-10 w-6 sm:absolute sm:-start-18 sm:me-0 sm:h-20 sm:w-12"
 				src="/icon.svg"
 				alt="AnuRock logo"
