Minor tweaks to About page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -68,6 +68,14 @@ const meta = {
 				easily excited and find it difficult to resist the urge to try new technologies.
 			</p>
 			<p class="mb-4">
+				During my college days, I started a <a
+					class="cactus-link"
+					href="https://en.wikipedia.org/wiki/Granular_Linux">Linux distribution</a
+				> to channel my overflowing enthusiasm for open-source. But mostly to go deeper in computer operating
+				systems. Other than OSes, that experience taught me a hell lot about DevOps, PHP, and, importantly,
+				solopreneurship.
+			</p>
+			<p class="mb-4">
 				I started my career as a <a
 					class="cactus-link"
 					href="https://en.wikipedia.org/wiki/.NET_Framework">.NET</a
@@ -110,11 +118,12 @@ const meta = {
 		<section class="mb-8">
 			<h2 class="mb-6 text-xl font-bold">My software development philosophy</h2>
 			<p class="mb-4">
-				I subscribe to the <span class="bg-yellow-200"
-					><a href="#" class="cactus-link">jack of all trades</a> and master of one</span
-				> philosophy. Some people call it the T-shaped profile. I strongly believe that to succeed in
-				the ever-changing tech landscape of today, a software developer must constantly learn and unlearn
-				skills as demanded by work at hand.
+				I subscribe to the <a
+					href="https://anuragbhandari.com/coding-tech/jack-of-all-trades-1993/"
+					class="cactus-link">jack of all trades</a
+				> (and master of [n]one) philosophy. Some people call it the T-shaped profile. I strongly believe
+				that to succeed in the ever-changing tech landscape of today, a software developer must constantly
+				learn and unlearn skills as demanded by work at hand.
 			</p>
 			<p class="mb-4">
 				Languages and frameworks are spanners and pliers in an ever-evolving toolkit. There's no
