Attempt to fix vertical stretching of home page photo on mobile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,11 +25,11 @@ const latestNotes = allNotes.sort(collectionDateSort).slice(0, MAX_NOTES);
 		<h1 class="title mb-6">Howdy 👋</h1>
 		<div>
 			<img
-				class="ml-3 size-fit rounded-md outline -outline-offset-1 outline-black/10 md:float-right md:w-2/5"
+				class="rounded-md outline -outline-offset-1 outline-black/10 md:float-right md:ml-3 md:w-2/5"
 				src="/anurag-smirk.jpg"
 				alt="Anurag sitting in front of his computer monitor with a big smile on his face."
 			/>
-			<div>
+			<div class="mt-0 sm:mt-4">
 				<p class="mb-4">
 					Welcome to the den of <a class="cactus-link" href="https://anuragbhandari.com"
 						>Anurag Bhandari</a
