Minor tweaks to about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -48,10 +48,14 @@ const meta = {
 				> as an active member of a community forum.
 			</p>
 			<p class="mb-4">
-				What got me really hooked to web development was KDE's gallery generator (built into its
-				file explorer) that took in a bunch of selected image files and spit out a beautiful HTML
-				file complete with the necessary <strong>CSS and JavaScript</strong>. The unlikliest of
-				sources of inspiration, I know. But CSS and JS were a game changer for me.
+				What got me really hooked to web development was <a
+					class="cactus-link"
+					href="https://en.wikipedia.org/wiki/K_Desktop_Environment_3">KDE</a
+				>'s gallery generator (built into its file explorer) that took in a bunch of selected image
+				files and spit out a beautiful HTML file complete with the necessary <strong
+					>CSS and JavaScript</strong
+				>. The unlikliest of sources of inspiration, I know. But CSS and JS were a game changer for
+				me.
 			</p>
 			<div class="mt-6 mb-6 overflow-hidden rounded-lg bg-zinc-200">
 				<img
@@ -98,17 +102,30 @@ const meta = {
 					href="https://en.wikipedia.org/wiki/AngularJS">AngularJS</a
 				> to <a class="cactus-link" href="https://en.wikipedia.org/wiki/Angular_(web_framework)"
 					>Angular</a
-				> 2 (beta) was an adventure of a lifetime! Less than a year after React was publicly released,
-				with a state management pattern called Flux, I was teaching a class full of college graduates
-				to build an enterprise CRM end-to-end in JS (React + Node.js).
+				> 2 (beta) was an adventure of a lifetime! Less than a year after <a
+					class="cactus-link"
+					href="https://en.wikipedia.org/wiki/React_(software)">React</a
+				> was publicly released, with a state management pattern called Flux, I was teaching a class
+				full of college graduates to build an enterprise CRM end-to-end in JS (React + Node.js).
 			</p>
 			<p class="mb-4">
-				I became a <a href="https://en.wikipedia.org/wiki/Flutter_(software)">Flutter</a> fan early on
-				and established a center of excellence at a large digital consulting firm to promote it as a
-				viable mobile SDK. This website was first created as a weekend project in <a
+				I became a <a class="cactus-link" href="https://en.wikipedia.org/wiki/Flutter_(software)"
+					>Flutter</a
+				> fan early on and established a center of excellence at a large digital consulting firm to promote
+				it as a viable mobile SDK. This website was first created as a weekend project in <a
 					class="cactus-link"
 					href="https://astro.build">Astro</a
 				> the day it turned v1.
+			</p>
+			<p class="mb-4">
+				I've also dabbled in <a
+					class="cactus-link"
+					href="https://en.wikipedia.org/wiki/Ruby_(programming_language)">Ruby</a
+				>, <a class="cactus-link" href="https://en.wikipedia.org/wiki/Ruby_on_Rails">Rails</a> (my first
+				love in the world of opinionated frameworks), and <a
+					class="cactus-link"
+					href="https://en.wikipedia.org/wiki/Python_(programming_language)">Python</a
+				>.
 			</p>
 			<p class="mb-4">
 				All that to say my profession is <strong>not defined by a particular</strong> language or tech
