--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const latestNotes = allNotes.sort(collectionDateSort).slice(0, MAX_NOTES);
 				src="/anurag-smirk.jpg"
 				alt="Anurag sitting in front of his computer monitor with a big smile on his face."
 			/>
-			<div class="mt-0 sm:mt-4">
+			<div class="mt-4">
 				<p class="mb-4">
 					Welcome to the den of <a class="cactus-link" href="https://anuragbhandari.com"
 						>Anurag Bhandari</a
