Add site caption

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const latestNotes = allNotes.sort(collectionDateSort).slice(0, MAX_NOTES);
 			/>
 			<div class="mt-4">
 				<p class="mb-4">
-					Welcome to the den of <a class="cactus-link" href="https://anuragbhandari.com"
+					Welcome to the garden of <a class="cactus-link" href="https://anuragbhandari.com"
 						>Anurag Bhandari</a
 					> the developer. I am a <strong>generalist</strong> software engineer.
 				</p>
