--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -7,19 +7,24 @@ import { siteConfig } from "../../site.config";
 
 <header class="group relative mb-28 flex items-center sm:ps-18" id="main-header">
 	<div class="flex sm:flex-col">
-		<a
-			aria-current={Astro.url.pathname === "/" ? "page" : false}
-			class="inline-flex items-center grayscale hover:filter-none sm:relative sm:inline-block"
-			href="/"
-		>
-			<img
-				id="site-logo"
-				class="me-3 h-10 w-6 sm:absolute sm:-start-18 sm:me-0 sm:h-20 sm:w-12"
-				src="/icon.svg"
-				alt="AnuRock logo"
-			/>
-			<span class="text-xl font-bold sm:text-2xl">{siteConfig.title}</span>
-		</a>
+		<div class="flex flex-col sm:flex-row sm:items-center">
+			<a
+				aria-current={Astro.url.pathname === "/" ? "page" : false}
+				class="inline-flex items-center grayscale hover:filter-none sm:relative sm:inline-block"
+				href="/"
+			>
+				<img
+					id="site-logo"
+					class="me-3 h-10 w-6 sm:absolute sm:-start-22 sm:me-0 sm:h-16 sm:w-15"
+					src="/icon.svg"
+					alt="AnuRock logo"
+				/>
+				<span class="text-xl font-bold sm:text-2xl">{siteConfig.title}</span>
+			</a>
+			<div class="mt-4 text-sm text-gray-600 sm:ms-4 sm:mt-0 sm:text-base">
+				{siteConfig.caption}
+			</div>
+		</div>
 		<nav
 			aria-label="Main menu"
 			class="bg-global-bg/85 text-accent sm:divide-accent absolute -inset-x-4 top-14 hidden flex-col items-end gap-y-4 rounded-md py-4 shadow backdrop-blur-sm group-[.menu-open]:z-50 group-[.menu-open]:flex sm:static sm:z-auto sm:-ms-4 sm:mt-1 sm:flex sm:flex-row sm:items-center sm:divide-x sm:rounded-none sm:bg-transparent sm:py-0 sm:shadow-none sm:backdrop-blur-none"
