--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,16 +3,14 @@ import { type CollectionEntry, getCollection } from "astro:content";
 import SocialList from "@/components/SocialList.astro";
 import PostPreview from "@/components/blog/PostPreview.astro";
 import Note from "@/components/note/Note.astro";
-import { getAllPosts } from "@/data/post";
+import { getAllPostsByDate } from "@/data/post";
 import PageLayout from "@/layouts/Base.astro";
 import { collectionDateSort } from "@/utils/date";
 import Bookmark from "@/components/bookmark/Bookmark.astro";
 
 // Posts
 const MAX_POSTS = 10;
-const allPosts = await getAllPosts();
-const allPostsByDate = allPosts
-	.sort(collectionDateSort)
+const allPosts = (await getAllPostsByDate())
 	.slice(0, MAX_POSTS) as CollectionEntry<"post">[];
 
 // Notes
@@ -66,7 +64,7 @@ const latestBookmarks = allBookmarks
 		</h2>
 		<ul class="space-y-6" role="list">
 			{
-				allPostsByDate.map((p) => (
+				allPosts.map((p) => (
 					<li class="grid gap-2 sm:grid-cols-[auto_1fr]">
 						<PostPreview post={p} />
 					</li>
