--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import Bookmark from "@/components/bookmark/Bookmark.astro";
 // Posts
 const MAX_POSTS = 10;
 const allPosts = (await getAllPostsByDate())
+const latestPosts = allPosts
 	.slice(0, MAX_POSTS) as CollectionEntry<"post">[];
 
 // Notes
@@ -64,7 +65,7 @@ const latestBookmarks = allBookmarks
 		</h2>
 		<ul class="space-y-6" role="list">
 			{
-				allPosts.map((p) => (
+				latestPosts.map((p) => (
 					<li class="grid gap-2 sm:grid-cols-[auto_1fr]">
 						<PostPreview post={p} />
 					</li>
