Add support for cover image in notes

--- a/src/components/note/Note.astro
+++ b/src/components/note/Note.astro
@@ -2,6 +2,7 @@
 import { type CollectionEntry, render } from "astro:content";
 import FormattedDate from "@/components/FormattedDate.astro";
 import type { HTMLTag, Polymorphic } from "astro/types";
+import { Image,getImage } from "astro:assets";
 
 type Props<Tag extends HTMLTag> = Polymorphic<{ as: Tag }> & {
 	note: CollectionEntry<"note">;
@@ -10,6 +11,7 @@ type Props<Tag extends HTMLTag> = Polymorphic<{ as: Tag }> & {
 
 const { as: Tag = "div", note, isPreview = false } = Astro.props;
 const { Content } = await render(note);
+const coverImage = note.data.coverImage ? await getImage({ src: note.data.coverImage.src }) : null;
 ---
 
 <article
@@ -31,18 +33,29 @@ const { Content } = await render(note);
 	</Tag>
 	<FormattedDate
 		dateTimeOptions={{
-			hour: "2-digit",
-			minute: "2-digit",
 			year: "2-digit",
 			month: "2-digit",
 			day: "2-digit",
 		}}
 		date={note.data.publishDate}
 	/>
-	<div
-		class="prose prose-sm prose-cactus mt-4 max-w-none [&>p:last-of-type]:mb-0"
-		class:list={{ "line-clamp-6": isPreview }}
-	>
-		<Content />
+	<div class="flex gap-4 mt-4">
+		<div class="flex-1 prose prose-sm prose-cactus max-w-none [&>p:last-of-type]:mb-0" class:list={{ "line-clamp-6": isPreview }}>
+			<Content />
+		</div>
+		{note.data.coverImage?.src && (
+			<div class="flex-shrink-0">
+				<a href={coverImage?.src || ""} target="_blank" rel="noreferrer">
+					<Image
+					alt={note.data.coverImage.alt}
+					class="object-cover"
+					fetchpriority="high"
+					loading="eager"
+					src={note.data.coverImage.src}
+					width={144}
+				/>
+				</a>
+			</div>
+		)}
 	</div>
 </article>
