--- a/src/components/SocialList.astro
+++ b/src/components/SocialList.astro
@@ -17,11 +17,26 @@ const socialLinks: {
 		link: "https://github.com/anu-rock",
 		name: "mdi:github",
 	},
+	{
+		friendlyName: "LinkedIn",
+		link: "https://www.linkedin.com/in/anuragbhandari/",
+		name: "mdi:linkedin",
+	},
+	{
+		friendlyName: "Personal blog",
+		link: "https://anuragbhandari.com",
+		name: "mdi:wordpress",
+	},
+	{
+		friendlyName: "Twitter",
+		link: "https://twitter.com/anuragbhandari",
+		name: "mdi:twitter",
+	},
 ];
 ---
 
 <div class="flex flex-wrap items-end gap-x-2">
-	<p>Find me on</p>
+	<p class="text-base">Find me on</p>
 	<ul class="flex flex-1 items-center gap-x-2 sm:flex-initial">
 		{
 			socialLinks.map(({ friendlyName, isWebmention, link, name }) => (
