--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -10,44 +10,162 @@ import { siteConfig } from "../../site.config";
 		<div class="flex flex-col sm:flex-row sm:items-center">
 			<a
 				aria-current={Astro.url.pathname === "/" ? "page" : false}
-				class="inline-flex items-center grayscale hover:filter-none sm:relative sm:inline-block"
+				class="inline-flex items-center hover:filter-none sm:relative sm:inline-block"
 				href="/"
 			>
 				<img
 					id="site-logo"
 					class="me-3 h-10 w-6 sm:absolute sm:-start-22 sm:me-0 sm:h-16 sm:w-15"
-					src="/icon.svg"
+					src={siteConfig.logoLight}
 					alt="AnuRock logo"
 				/>
-				<span class="text-xl font-bold sm:text-2xl">
-					<svg width="100" height="30" viewBox="0 0 100 30">
+				<span class="text-xl font-bold sm:text-2xl dark:fill-white">
+					<svg
+						width="100"
+						height="30"
+						viewBox="0 0 100 30"
+						xmlns="http://www.w3.org/2000/svg"
+						xmlns:xlink="http://www.w3.org/1999/xlink"
+					>
 						<g>
-							<text id="char1" x="10" y="20" font-size="24" text-anchor="middle" dominant-baseline="middle"
-								opacity="0">A</text>
-							<text id="char2" x="24" y="20" font-size="24" text-anchor="middle" dominant-baseline="middle"
-								opacity="0">n</text>
-							<text id="char3" x="38" y="20" font-size="24" text-anchor="middle" dominant-baseline="middle"
-								opacity="0">u</text>
-							<text id="char4" x="52" y="20" font-size="24" text-anchor="middle" dominant-baseline="middle"
-								opacity="0">R</text>
-							<text id="char5" x="66" y="20" font-size="24" text-anchor="middle" dominant-baseline="middle"
-								opacity="0">o</text>
-							<text id="char6" x="80" y="20" font-size="24" text-anchor="middle" dominant-baseline="middle"
-								opacity="0">c</text>
-							<text id="char7" x="94" y="20" font-size="24" text-anchor="middle" dominant-baseline="middle"
-								opacity="0">k</text>
-							<animate xlink:href="#char1" attributeName="opacity" from="0" to="1" begin="0s" dur="0.1s" fill="freeze" />
-							<animate xlink:href="#char2" attributeName="opacity" from="0" to="1" begin="0.1s" dur="0.1s" fill="freeze" />
-							<animate xlink:href="#char3" attributeName="opacity" from="0" to="1" begin="0.2s" dur="0.1s" fill="freeze" />
-							<animate xlink:href="#char4" attributeName="opacity" from="0" to="1" begin="0.3s" dur="0.1s" fill="freeze" />
-							<animate xlink:href="#char5" attributeName="opacity" from="0" to="1" begin="0.4s" dur="0.1s" fill="freeze" />
-							<animate xlink:href="#char6" attributeName="opacity" from="0" to="1" begin="0.5s" dur="0.1s" fill="freeze" />
-							<animate xlink:href="#char7" attributeName="opacity" from="0" to="1" begin="0.6s" dur="0.1s" fill="freeze" />
+							<text
+								id="char1"
+								x="10"
+								y="20"
+								font-size="24"
+								text-anchor="middle"
+								dominant-baseline="central"
+								opacity="0">A</text
+							>
+							<text
+								id="char2"
+								x="24"
+								y="20"
+								font-size="24"
+								text-anchor="middle"
+								dominant-baseline="central"
+								opacity="0">n</text
+							>
+							<text
+								id="char3"
+								x="38"
+								y="20"
+								font-size="24"
+								text-anchor="middle"
+								dominant-baseline="central"
+								opacity="0">u</text
+							>
+							<text
+								id="char4"
+								x="52"
+								y="20"
+								font-size="24"
+								text-anchor="middle"
+								dominant-baseline="central"
+								opacity="0">R</text
+							>
+							<text
+								id="char5"
+								x="66"
+								y="20"
+								font-size="24"
+								text-anchor="middle"
+								dominant-baseline="central"
+								opacity="0">o</text
+							>
+							<text
+								id="char6"
+								x="80"
+								y="20"
+								font-size="24"
+								text-anchor="middle"
+								dominant-baseline="central"
+								opacity="0">c</text
+							>
+							<text
+								id="char7"
+								x="94"
+								y="20"
+								font-size="24"
+								text-anchor="middle"
+								dominant-baseline="central"
+								opacity="0">k</text
+							>
+							<animate
+								xlink:href="#char1"
+								attributeName="opacity"
+								from="0"
+								to="1"
+								begin="0s"
+								dur="0.1s"
+								fill="freeze"
+							>
+							</animate>
+							<animate
+								xlink:href="#char2"
+								attributeName="opacity"
+								from="0"
+								to="1"
+								begin="0.1s"
+								dur="0.1s"
+								fill="freeze"
+							>
+							</animate>
+							<animate
+								xlink:href="#char3"
+								attributeName="opacity"
+								from="0"
+								to="1"
+								begin="0.2s"
+								dur="0.1s"
+								fill="freeze"
+							>
+							</animate>
+							<animate
+								xlink:href="#char4"
+								attributeName="opacity"
+								from="0"
+								to="1"
+								begin="0.3s"
+								dur="0.1s"
+								fill="freeze"
+							>
+							</animate>
+							<animate
+								xlink:href="#char5"
+								attributeName="opacity"
+								from="0"
+								to="1"
+								begin="0.4s"
+								dur="0.1s"
+								fill="freeze"
+							>
+							</animate>
+							<animate
+								xlink:href="#char6"
+								attributeName="opacity"
+								from="0"
+								to="1"
+								begin="0.5s"
+								dur="0.1s"
+								fill="freeze"
+							>
+							</animate>
+							<animate
+								xlink:href="#char7"
+								attributeName="opacity"
+								from="0"
+								to="1"
+								begin="0.6s"
+								dur="0.1s"
+								fill="freeze"
+							>
+							</animate>
 						</g>
 					</svg>
 				</span>
 			</a>
-			<div class="mt-4 text-sm text-gray-600 sm:ms-4 sm:mt-0 sm:text-base">
+			<div class="mt-4 text-sm text-gray-600 sm:ms-4 sm:mt-0 sm:text-base dark:text-gray-300">
 				{siteConfig.caption}
 			</div>
 		</div>
@@ -115,6 +233,13 @@ import { siteConfig } from "../../site.config";
 
 <script>
 	import { toggleClass } from "@/utils/domElement";
+	import { siteConfig } from "../../site.config";
+	import { rootInDarkMode } from "@/utils/domElement";
+
+	// Load the appropriate logo based on the current theme.
+	rootInDarkMode()
+		? document.getElementById("site-logo")?.setAttribute("src", siteConfig.logoDark)
+		: document.getElementById("site-logo")?.setAttribute("src", siteConfig.logoLight);
 
 	class MobileNavBtn extends HTMLElement {
 		#menuOpen: boolean = false;
